# any

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yaml  test-windows.ps1
cmake/: clangd_compile_info.cmake  cmake_utilities.cmake
example/: CMakeLists.txt  basic.cpp  comparable.cpp  function.cpp
include/any/: any.hpp
include/any/detail/: config.hpp  typeinfo.hpp  utility.hpp
test/: CMakeLists.txt  any_test.cpp
